# pmr_example

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
examples/allocator_aware_object/: CMakeLists.txt
examples/allocator_aware_object/src/: main.cpp
examples/mem_resource_chaining/: CMakeLists.txt
examples/mem_resource_chaining/src/: main.cpp
examples/tri_mesh_smoothing/: CMakeLists.txt
examples/tri_mesh_smoothing/src/: abstract_base.h  laplacian_smoothing.cpp  laplacian_smoothing.h  main.cpp  tri_mesh.cpp  tri_mesh.h
